--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <p>sara</p>
-</body>
+    <h1>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis adipisci
+      quisquam magni necessitatibus eius molestias officiis aliquid
+      exercitationem nemo, sed, doloremque veritatis obcaecati esse, itaque
+      architecto quod repellendus earum consequuntur?
+    </h1>
+  </body>
 </html>
